--- a/style.css
+++ b/style.css
@@ -163,3 +163,11 @@ form button {
             padding-top: auto;
         }
     }
+.container {
+    max-width: 550px;
+    margin: auto;
+    background: #40f840;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
